kubernetes/wso2is/4-deployment.yml
# ==================================================================================
# NOTE: change from Deployment to StatefulSet if you are deploying a WSO2 IS cluster
# ==================================================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wso2is-deployment
  namespace: wso2is
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: wso2is
  template:
    metadata:
      labels:
        app: wso2is
    spec:
      hostAliases:
        - ip: '127.0.0.1'
          hostnames:
            - 'is.parel25.nl'
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsUser: 802
      containers:
      - name: wso2is
        image: wso2is:6.1.0
        imagePullPolicy: Never
        resources:
          requests:
            memory: '1.5G'
            cpu: "1000m"
          limits:
            memory: '1.5G'
            cpu: "1000m"
        lifecycle:
          preStop:
            exec:
              command:  ['sh', '-c', '${WSO2_SERVER_HOME}/bin/wso2server.sh stop']
        volumeMounts:
        - name: wso2is-server-conf
          mountPath: /home/wso2carbon/wso2-config-volume/repository/conf/deployment.toml
          subPath: deployment.toml
        ports:
        - containerPort: 9763
          protocol: TCP
        - containerPort: 9443
          protocol: TCP
      volumes:
      - name: wso2is-server-conf
        configMap:
          name: wso2is-server-conf
      serviceAccountName: 'wso2is-account'

---
apiVersion: v1
kind: Service
metadata:
  name: wso2is-service
  namespace: wso2is
spec:
  selector:
    app: wso2is
  ports:
  - name: https
    protocol: TCP
    port: 9443
    targetPort: 9443
  - name: http
    protocol: TCP
    port: 9763
    targetPort: 9763
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wso2is-ingress
  namespace: wso2is
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: 'PUT, GET, POST, OPTIONS'
spec:
  tls:
    - hosts:
        - '*.parel25.nl'
        - 'parel25.nl'
      secretName: wildcard
  rules:
    - host: is.parel25.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wso2is-service
                port:
                  number: 9443
  ingressClassName: nginx
